--- a/profile.html
+++ b/profile.html
@@ -357,7 +357,7 @@
           <span id="statusText">All changes saved</span>
         </div>
         <button class="btn btn-primary" id="generateResumeBtn">📄 Generate Resume</button>
-        <button class="btn btn-success" id="saveProfileBtn">💾 Save Now</button>
+        <button class="btn btn-success" id="saveProfileBtn"> Save Now</button>
         <button class="btn btn-secondary" id="backToDashboard">← Back to Dashboard</button>
       </div>
     </div>
@@ -846,4 +846,5 @@
   </script>
 </body>
 </html>
+
 
