--- a/aboutus.html
+++ b/aboutus.html
@@ -454,12 +454,10 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="sidebar-logo">
-            <div class="sidebar-logo-icon">P</div>
-            <div class="sidebar-logo-text">Productiv.</div>
-        </div>
+        <div class="menu-title">Menu</div>
         <a href="dashboard.html" class="menu-item">Dashboard</a>
         <a href="calendar.html" class="menu-item">Calendar</a>
+        <a href="research-paper.html" class="menu-item">Research Paper</a>
         <a href="profile.html" class="menu-item">Profile</a>
         <a href="aboutus.html" class="menu-item active">About Us</a>
         <a href="logout.html" class="menu-item">Logout</a>
