--- a/notes.html
+++ b/notes.html
@@ -5,13 +5,17 @@
   <title>Quick Notes - Project Management</title>
   <style>
     :root {
-      --accent: #ef4444;
-      --accent-hover: #dc2626;
-      --bg: #f4f4ff;
-      --card: #ffffff;
-      --muted: #6b7280;
-      --success: #10b981;
-      --warning: #f59e0b;
+      --accent:#6366f1;
+      --accent-2:#4f46e5;
+      --bg:#f8f9fc;
+      --card:#ffffff;
+      --muted:#64748b;
+      --text-primary:#0f172a;
+      --text-secondary:#475569;
+      --success:#10b981;
+      --warning:#f59e0b;
+      --danger:#ef4444;
+      --border:#e2e8f0;
     }
 
     * {
@@ -21,22 +25,23 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Inter', sans-serif;
       background: var(--bg);
       min-height: 100vh;
+      color: var(--text-primary);
     }
 
     .container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 30px 20px;
+      padding: 40px 20px;
     }
 
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 30px;
+      margin-bottom: 32px;
       flex-wrap: wrap;
       gap: 15px;
     }
@@ -48,23 +53,24 @@
     }
 
     .back-btn {
-      background: white;
-      border: 1px solid #e5e7eb;
+      background: var(--card);
+      border: 1px solid var(--border);
       padding: 10px 15px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       transition: all 0.2s;
       text-decoration: none;
-      color: #374151;
+      color: var(--text-primary);
       display: inline-flex;
       align-items: center;
       gap: 5px;
+      font-weight: 500;
     }
 
     .back-btn:hover {
-      background: #f9fafb;
-      border-color: #d1d5db;
+      background: #f1f5f9;
+      border-color: #cbd5e1;
     }
 
     .back-btn:focus {
@@ -72,11 +78,12 @@
     }
 
     h1 {
-      font-size: 2rem;
-      color: #1f2937;
+      font-size: 1.5rem;
+      color: var(--text-primary);
       display: flex;
       align-items: center;
       gap: 10px;
+      font-weight: 600;
     }
 
     .add-buttons {
@@ -85,13 +92,13 @@
     }
 
     .add-btn {
-      background: linear-gradient(135deg, var(--accent), var(--accent-hover));
+      background: linear-gradient(135deg, var(--accent), var(--accent-2));
       color: white;
       border: none;
-      padding: 12px 24px;
+      padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 0.875rem;
       font-weight: 600;
       transition: transform 0.2s, box-shadow 0.2s;
       display: flex;
@@ -101,7 +108,7 @@
 
     .add-btn:hover {
       transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(239, 68, 68, 0.3);
+      box-shadow: 0 12px 24px rgba(99, 102, 241, 0.2);
     }
 
     .add-btn.voice {
@@ -109,15 +116,16 @@
     }
 
     .add-btn.voice:hover {
-      box-shadow: 0 4px 12px rgba(245, 158, 11, 0.3);
+      box-shadow: 0 12px 24px rgba(245, 158, 11, 0.2);
     }
 
     .filter-section {
-      background: white;
+      background: var(--card);
       padding: 20px;
       border-radius: 12px;
       margin-bottom: 25px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      border: 1px solid var(--border);
       display: flex;
       gap: 15px;
       flex-wrap: wrap;
@@ -131,46 +139,48 @@
     }
 
     .filter-group label {
-      font-size: 0.9rem;
-      color: var(--muted);
+      font-size: 0.875rem;
+      color: var(--text-secondary);
       font-weight: 500;
     }
 
     .filter-select {
       padding: 8px 12px;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       border-radius: 6px;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       cursor: pointer;
-      background: white;
+      background: var(--card);
+      color: var(--text-primary);
     }
 
     .notes-grid {
       display: grid;
-      gap: 20px;
+      gap: 24px;
     }
 
     .note-card {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      border-left: 4px solid var(--accent);
+      background: var(--card);
+      border-radius: 16px;
+      padding: 24px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      border: 1px solid var(--border);
       transition: transform 0.2s, box-shadow 0.2s;
       position: relative;
     }
 
     .note-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      transform: translateY(-4px);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.1);
+      border-color: rgba(99,102,241,0.2);
     }
 
     .note-card.voice {
-      border-left-color: #f59e0b;
+      border-left: 4px solid #f59e0b;
     }
 
     .note-card.text {
-      border-left-color: #6366f1;
+      border-left: 4px solid var(--accent);
       cursor: pointer;
     }
 
@@ -183,9 +193,9 @@
     }
 
     .note-title {
-      font-size: 1.2rem;
+      font-size: 1.125rem;
       font-weight: 600;
-      color: #1f2937;
+      color: var(--text-primary);
       flex: 1;
     }
 
@@ -196,17 +206,18 @@
 
     .icon-btn {
       background: transparent;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       padding: 6px 10px;
       border-radius: 6px;
       cursor: pointer;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       transition: all 0.2s;
+      color: var(--text-secondary);
     }
 
     .icon-btn:hover {
-      background: #f9fafb;
-      border-color: #d1d5db;
+      background: #f1f5f9;
+      border-color: #cbd5e1;
     }
 
     .icon-btn.edit:hover {
@@ -224,7 +235,7 @@
     .audio-player {
       margin-top: 15px;
       padding: 15px;
-      background: #f9fafb;
+      background: #f1f5f9;
       border-radius: 8px;
       display: flex;
       align-items: center;
@@ -237,22 +248,23 @@
     }
 
     .audio-btn {
-      background: white;
-      border: 1px solid #e5e7eb;
+      background: var(--card);
+      border: 1px solid var(--border);
       width: 36px;
       height: 36px;
       border-radius: 50%;
       cursor: pointer;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       transition: all 0.2s;
       display: flex;
       align-items: center;
       justify-content: center;
+      color: var(--text-secondary);
     }
 
     .audio-btn:hover {
-      background: #f3f4f6;
-      border-color: #d1d5db;
+      background: #f9fafb;
+      border-color: #cbd5e1;
     }
 
     .audio-btn.play:hover {
@@ -277,7 +289,7 @@
     .progress-bar {
       width: 100%;
       height: 6px;
-      background: #e5e7eb;
+      background: var(--border);
       border-radius: 3px;
       cursor: pointer;
       position: relative;
@@ -294,7 +306,7 @@
 
     .audio-time {
       font-size: 0.75rem;
-      color: var(--muted);
+      color: var(--text-secondary);
       display: flex;
       justify-content: space-between;
     }
@@ -304,20 +316,20 @@
       flex-wrap: wrap;
       gap: 15px;
       margin-bottom: 12px;
-      font-size: 0.9rem;
+      font-size: 0.813rem;
     }
 
     .meta-item {
       display: flex;
       align-items: center;
       gap: 5px;
-      color: var(--muted);
+      color: var(--text-secondary);
     }
 
     .type-badge {
       padding: 4px 10px;
       border-radius: 12px;
-      font-size: 0.85rem;
+      font-size: 0.75rem;
       font-weight: 600;
     }
 
@@ -332,7 +344,7 @@
     }
 
    .note-content {
-      color: #4b5563;
+      color: var(--text-secondary);
       line-height: 1.6;
       margin-top: 10px;
       word-wrap: break-word;
@@ -340,6 +352,7 @@
       white-space: pre-wrap;
       max-width: 100%;
       overflow-x: hidden;
+      font-size: 0.875rem;
     }
 
     .note-content.preview {
@@ -367,7 +380,7 @@
     }
 
     .modal-content {
-      background: white;
+      background: var(--card);
       padding: 30px;
       border-radius: 16px;
       width: 90%;
@@ -384,8 +397,9 @@
     }
 
     .modal-header h2 {
-      font-size: 1.5rem;
-      color: #1f2937;
+      font-size: 1.25rem;
+      color: var(--text-primary);
+      font-weight: 600;
     }
 
     .close-btn {
@@ -393,7 +407,7 @@
       border: none;
       font-size: 1.5rem;
       cursor: pointer;
-      color: var(--muted);
+      color: var(--text-secondary);
       padding: 0;
       width: 30px;
       height: 30px;
@@ -407,17 +421,20 @@
       display: block;
       margin-bottom: 8px;
       font-weight: 600;
-      color: #374151;
+      color: var(--text-primary);
+      font-size: 0.875rem;
     }
 
     .form-group input,
     .form-group textarea {
       width: 100%;
       padding: 10px 12px;
-      border: 1px solid #d1d5db;
+      border: 1px solid var(--border);
       border-radius: 8px;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       font-family: inherit;
+      background: var(--card);
+      color: var(--text-primary);
     }
 
     .form-group textarea {
@@ -428,19 +445,20 @@
     .view-content {
       margin: 20px 0;
       padding: 20px;
-      background: #f9fafb;
+      background: #f1f5f9;
       border-radius: 8px;
-      color: #374151;
+      color: var(--text-primary);
       line-height: 1.8;
       white-space: pre-wrap;
       word-wrap: break-word;
       max-height: 400px;
       overflow-y: auto;
+      font-size: 0.875rem;
     }
 
     .view-content:empty:before {
       content: "No content";
-      color: var(--muted);
+      color: var(--text-secondary);
       font-style: italic;
     }
 
@@ -450,7 +468,7 @@
       align-items: center;
       gap: 20px;
       padding: 30px 20px;
-      background: #f9fafb;
+      background: #f1f5f9;
       border-radius: 12px;
       margin-bottom: 20px;
       position: relative;
@@ -470,19 +488,19 @@
       height: 80px;
       border-radius: 50%;
       border: none;
-      background: linear-gradient(135deg, #ef4444, #dc2626);
+      background: linear-gradient(135deg, var(--accent), var(--accent-2));
       color: white;
       font-size: 2rem;
       cursor: pointer;
       transition: all 0.3s;
-      box-shadow: 0 4px 15px rgba(239, 68, 68, 0.3);
+      box-shadow: 0 4px 15px rgba(99, 102, 241, 0.3);
       position: relative;
       z-index: 2;
     }
 
     .record-button:hover {
       transform: scale(1.05);
-      box-shadow: 0 6px 20px rgba(239, 68, 68, 0.4);
+      box-shadow: 0 6px 20px rgba(99, 102, 241, 0.4);
     }
 
     .record-button.recording {
@@ -540,8 +558,8 @@
 
     .recording-status {
       text-align: center;
-      color: var(--muted);
-      font-size: 1rem;
+      color: var(--text-secondary);
+      font-size: 0.875rem;
       min-height: 60px;
       display: flex;
       flex-direction: column;
@@ -553,7 +571,7 @@
     .recording-time {
       font-weight: 600;
       color: #10b981;
-      font-size: 1.4rem;
+      font-size: 1.25rem;
     }
 
     .recording-indicator {
@@ -562,6 +580,7 @@
       gap: 8px;
       color: #10b981;
       font-weight: 600;
+      font-size: 0.875rem;
     }
 
     .recording-indicator.active {
@@ -571,7 +590,7 @@
     .rec-dot {
       width: 12px;
       height: 12px;
-      background: #ef4444;
+      background: var(--danger);
       border-radius: 50%;
       animation: blink 1.5s infinite;
     }
@@ -589,22 +608,24 @@
     }
 
     .btn-cancel {
-      background: white;
-      border: 1px solid #d1d5db;
+      background: var(--card);
+      border: 1px solid var(--border);
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
+      color: var(--text-primary);
+      font-weight: 500;
     }
 
     .btn-save {
-      background: linear-gradient(135deg, var(--accent), var(--accent-hover));
+      background: linear-gradient(135deg, var(--accent), var(--accent-2));
       color: white;
       border: none;
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       font-weight: 600;
     }
 
@@ -616,7 +637,7 @@
     .empty-state {
       text-align: center;
       padding: 60px 20px;
-      color: var(--muted);
+      color: var(--text-secondary);
     }
 
     .empty-state-icon {
@@ -625,9 +646,10 @@
     }
 
     .empty-state h3 {
-      font-size: 1.3rem;
+      font-size: 1.125rem;
       margin-bottom: 10px;
-      color: #4b5563;
+      color: var(--text-primary);
+      font-weight: 600;
     }
 
     .toast {
@@ -642,6 +664,8 @@
       transform: translateX(400px);
       transition: transform 0.3s;
       z-index: 1000;
+      font-size: 0.875rem;
+      font-weight: 600;
     }
 
     .toast.show {
@@ -649,14 +673,15 @@
     }
 
     .toast.error {
-      background: #ef4444;
+      background: var(--danger);
     }
 
     .loading {
       text-align: center;
       padding: 20px;
-      color: var(--muted);
+      color: var(--text-secondary);
       font-style: italic;
+      font-size: 0.875rem;
     }
 
     .error {
@@ -667,6 +692,7 @@
       border-radius: 8px;
       margin: 10px 0;
       text-align: center;
+      font-size: 0.875rem;
     }
 
     @media (max-width: 768px) {
