--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Dashboard</title>
+    <title>About Us</title>
     <style>
         * {
             margin: 0;
@@ -457,7 +457,6 @@
         <div class="menu-title">Menu</div>
         <a href="dashboard.html" class="menu-item">Dashboard</a>
         <a href="calendar.html" class="menu-item">Calendar</a>
-        <a href="research-paper.html" class="menu-item">Research Paper</a>
         <a href="profile.html" class="menu-item">Profile</a>
         <a href="aboutus.html" class="menu-item active">About Us</a>
         <a href="logout.html" class="menu-item">Logout</a>
