--- a/career.html
+++ b/career.html
@@ -423,6 +423,7 @@
       background: #f3f4f6;
       border-radius: 8px;
       font-size: 0.875rem;
+      margin-top: 15px;
     }
 
     .modal {
@@ -1288,3 +1289,4 @@
   </script>
 </body>
 </html>
+
