--- a/dashboard.html
+++ b/dashboard.html
@@ -409,7 +409,7 @@
   <div class="sidebar">
     <div class="sidebar-logo">
       <div class="sidebar-logo-icon">P</div>
-      <div class="sidebar-logo-text">Productiv.</div>
+      <div class="sidebar-logo-text">ProjectFlow</div>
     </div>
     <ul>
       <li id="menu-dashboard" class="active">Dashboard</li>
@@ -730,3 +730,4 @@
   </script>
 </body>
 </html>
+
