--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Tracker - Login</title>
+  <title>UniDesk - Login</title>
   <style>
     * {
       margin: 0;
@@ -749,7 +749,7 @@
     <div class="login-left">
       <div class="brand-header">
         <div class="brand-logo">≋</div>
-        <div class="brand-name">ProjectFlow</div>
+        <div class="brand-name">UniDesk</div>
       </div>
 
       <div class="brand-content">
@@ -1103,4 +1103,5 @@
   </script>
 </body>
 </html>
+
 
