--- a/aboutus.html
+++ b/aboutus.html
@@ -582,10 +582,10 @@
         <div class="footer">
             <div class="footer-logo">
                 <div class="footer-icon">📊</div>
-                <h3>ProjectTracker</h3>
+                <h3>UniDesk</h3>
             </div>
             <p>Empowering productivity through intelligent project management</p>
-            <p>© 2024 ProjectTracker. All rights reserved.</p>
+            <p>© 2025 UniDesk. All rights reserved.</p>
         </div>
     </div>
 </body>
