--- a/dashboard.html
+++ b/dashboard.html
@@ -51,13 +51,13 @@
     .sidebar-logo-icon {
       width: 32px;
       height: 32px;
-      background: linear-gradient(135deg, #6366f1, #8b5cf6);
-      border-radius: 8px;
+      background: #4a90e2;
+      border-radius: 6px;
       display: flex;
       align-items: center;
       justify-content: center;
       color: white;
-      font-weight: bold;
+      font-weight: 700;
       font-size: 18px;
     }
 
@@ -408,7 +408,7 @@
 <body>
   <div class="sidebar">
     <div class="sidebar-logo">
-      <div class="sidebar-logo-icon">P</div>
+      <div class="sidebar-logo-icon">≋</div>
       <div class="sidebar-logo-text">UniDesk</div>
     </div>
     <ul>
@@ -730,5 +730,3 @@
   </script>
 </body>
 </html>
-
-
