--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
   <title>Dashboard</title>
   <style>
     :root{
-      --accent:#6366f1;
+      --accent:#0f172a;
       --accent-2:#4f46e5;
       --bg:#f8f9fc;
       --card:#ffffff;
@@ -730,3 +730,4 @@
   </script>
 </body>
 </html>
+
