--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,7 @@
   <title>Dashboard</title>
   <style>
     :root{
-      --accent:#0f172a;
+      --accent:#4a90e2;
       --accent-2:#4f46e5;
       --bg:#f8f9fc;
       --card:#ffffff;
@@ -730,4 +730,5 @@
   </script>
 </body>
 </html>
+
 
