--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <title>Projects Section</title>
   <style>
     :root{
-      --accent:#6366f1;
+      --accent:#4a90e2;
       --accent-2:#4f46e5;
       --bg:#f8f9fc;
       --card:#ffffff;
@@ -1369,3 +1369,4 @@
   </script>
 </body>
 </html>
+
