--- a/future.html
+++ b/future.html
@@ -24,109 +24,36 @@
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Inter', sans-serif;
       background: var(--bg);
-      display: flex;
-      height: 100vh;
+      min-height: 100vh;
       color: var(--text-primary);
-    }
-
-    .sidebar {
-      width: 240px;
-      background: #ffffff;
-      color: var(--text-primary);
-      padding: 24px 0;
-      display: flex;
-      flex-direction: column;
-      box-shadow: 1px 0 0 var(--border);
-      position: relative;
-    }
-
-    .sidebar-logo {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      padding: 0 24px;
-      margin-bottom: 32px;
-    }
-
-    .sidebar-logo-icon {
-      width: 32px;
-      height: 32px;
-      background: linear-gradient(135deg, #6366f1, #8b5cf6);
-      border-radius: 8px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
-    }
-
-    .sidebar-logo-text {
-      font-size: 1.25rem;
-      font-weight: 700;
-      color: var(--text-primary);
-    }
-
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      flex: 1;
-    }
-
-    .sidebar li {
-      margin: 4px 16px;
-      padding: 10px 16px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 0.938rem;
-      font-weight: 500;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      transition: all 0.2s;
-      color: var(--text-secondary);
-    }
-
-    .sidebar li:hover {
-      background: #f1f5f9;
-      color: var(--text-primary);
-    }
-
-    .sidebar li.active {
-      background: #eef2ff;
-      color: #6366f1;
-    }
-
-    .sidebar li::before {
-      content: '';
-      width: 20px;
-      height: 20px;
-      display: inline-block;
-      opacity: 0.8;
-    }
-
-    #menu-dashboard::before { content: '📊'; }
-    #menu-ideas::before { content: '💡'; }
-    #menu-notes::before { content: '📝'; }
-    #menu-projects::before { content: '🚀'; }
-    #menu-future::before { content: '🔮'; }
-    #logout::before { content: '🚪'; }
-
-    #logout {
-      margin-top: auto;
-      color: #ef4444;
-      font-weight: 500;
-    }
-
-    #logout:hover {
-      background: #fef2f2;
     }
 
     .main {
-      flex: 1;
       padding: 40px;
-      overflow-y: auto;
+      max-width: 1400px;
+      margin: 0 auto;
+    }
+
+    .back-button {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 20px;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      background: white;
+      color: var(--text-primary);
+      cursor: pointer;
+      font-weight: 500;
+      font-size: 0.875rem;
+      transition: all 0.2s;
+      margin-bottom: 24px;
+      text-decoration: none;
+    }
+
+    .back-button:hover {
+      background: #f1f5f9;
+      transform: translateX(-2px);
     }
 
     .header {
@@ -499,10 +426,6 @@
     }
 
     @media (max-width: 768px) {
-      .sidebar {
-        width: 200px;
-      }
-
       .main {
         padding: 24px;
       }
@@ -526,22 +449,11 @@
   </style>
 </head>
 <body>
-  <div class="sidebar">
-    <div class="sidebar-logo">
-      <div class="sidebar-logo-icon">P</div>
-      <div class="sidebar-logo-text">Productiv.</div>
-    </div>
-    <ul>
-      <li id="menu-dashboard">Dashboard</li>
-      <li id="menu-ideas">Ideas</li>
-      <li id="menu-notes">Notes</li>
-      <li id="menu-projects">Projects</li>
-      <li id="menu-future" class="active">Future Work</li>
-      <li id="logout">Logout</li>
-    </ul>
-  </div>
-
   <div class="main">
+    <a href="dashboard.html" class="back-button">
+      ← Back to Dashboard
+    </a>
+
     <div class="header">
       <h1>🔮 Future Work</h1>
       <p>Plan and organize your upcoming projects and initiatives</p>
@@ -671,16 +583,6 @@
     if (!userEmail) {
       redirectToLogin();
     }
-
-    // Navigation
-    document.getElementById('menu-dashboard').onclick = () => window.location.href = 'dashboard.html';
-    document.getElementById('menu-ideas').onclick = () => window.location.href = 'ideas.html';
-    document.getElementById('menu-notes').onclick = () => window.location.href = 'notes.html';
-    document.getElementById('menu-projects').onclick = () => window.location.href = 'projects.html';
-    document.getElementById('logout').onclick = () => {
-      sessionStorage.clear();
-      window.location.href = '/';
-    };
 
     // State
     let items = [];
