--- a/career.html
+++ b/career.html
@@ -5,7 +5,7 @@
   <title>Career & Goals - Project Management</title>
   <style>
     :root {
-      --accent: #6366f1;
+      --accent: #4a90e2;
       --accent-hover: #4f46e5;
       --bg: #f8f9fc;
       --card: #ffffff;
@@ -1289,4 +1289,5 @@
   </script>
 </body>
 </html>
+
 
