--- a/ideas.html
+++ b/ideas.html
@@ -5,7 +5,7 @@
   <title>Recent Ideas - Note Taking</title>
   <style>
     :root{
-      --accent:#6366f1;
+      --accent:#4a90e2;
       --accent-2:#4f46e5;
       --bg:#f8f9fc;
       --card:#ffffff;
@@ -942,3 +942,4 @@
   </script>
 </body>
 </html>
+
