--- a/notes.html
+++ b/notes.html
@@ -5,7 +5,7 @@
   <title>Quick Notes - Project Management</title>
   <style>
     :root {
-      --accent:#6366f1;
+      --accent:#4a90e2;
       --accent-2:#4f46e5;
       --bg:#f8f9fc;
       --card:#ffffff;
@@ -1599,3 +1599,4 @@
   </script>
 </body>
 </html>
+
